# active-reading

./: .gitignore  main.py  pyproject.toml  utils.py
data/: get_wikipedia_pages.py  prep_simplewikiqa.py
data/augmentations/: active_reading.py
data/augmentations/active_reading/: active_reading.py  strategy_generation.py
validators/: simplewikiqa_validator.py  validator.py
